--- a/index.html
+++ b/index.html
@@ -1,115 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/index.js" type="module" async></script>
-    <title>Creative Commons Global Summit 2015</title>
-</head>
-
-<body>
-    <main id="main" class="container-fullwidth">
-        <header>
-            <nav id="nav" class="container-fullwidth navbar">
-                <div class="desktop-visible" id="top-nav">
-                    <a href="https://facebook.com"><img src="/assets/icons/facebook.png" alt="Facebook logo"></a>
-                    <a href="https://twitter.com"><img src="/assets/icons/twitter.png" alt="Twitter logo"></a>
-                    <a href="#">Logout</a>
-                    <a href="#">Mypage</a>
-                    <a href="#">English</a>
-                </div>
-                <img src="assets/icons/mobile-menu.png" alt="Menu hamburger button" id="hamburger" class="nav-item mobile-visible">
-                <div class="nav-options row-fullwidth mobile-visible" id="bottom-nav">
-                    <a class="desktop-visible" id="logo" href="index.html"><img src="assets/images/logo-clickable.png" alt="Clickable logo"></a>
-                    <img class="mobile-visible close-menu" src="assets/icons/close-icon.png" alt="Close menu button.">
-                    <div class="mobile-menu">
-                        <a class="nav-option current-page" href="/html/about.html">About</a>
-                        <a class="nav-option" href="#programs">Program</a>
-                        <a class="nav-option mobile-visible" href="#join-summit">Join</a>
-                        <a class="nav-option desktop-visible" href="#seewhole">Join</a>
-                        <a class="nav-option" href="#sponsors">Sponsor</a>
-                        <a class="nav-option" href="https://creativecommons.org/tag/news/">News</a>
-                        <a class="nav-option" href="https://creativecommons.org/campaign/">CC Campaign</a>
-                    </div>
-                </div>
-            </nav>
-        </header>
-        <section id="event-intro" class="container-fullwidth">
-            <span class="pre-title">"Hello! Sharing World"</span>
-            <h1 class="title">Creative Commons Global Summit 2015</h1>
-            <p class="introduction">
-                A joyful celebration believing in the value of openness and sharing, creating a positive change with people from over 80 countries is taking place in October, in Korea.
-            </p>
-            <article class="datetime-place">
-                <h2>2015.10.15(THU) ~ 16(FRI)</h2>
-                <div>
-                    @ National Museum of Korea, Art Center Nabi and more
-                </div>
-            </article>
-        </section>
-    </main>
-    <section class="container-fullwidth" id="programs">
-        <h2>Main Program</h2>
-        <hr class="hr">
-        <ul id="programs-list">
-            <li id="program1" class="program-item" tabindex="0">
-                <img src="assets/icons/program1.png" alt="Lecture Icon">
-                <h3>Lecture</h3>
-                <span>
-            Listen to the speakers from various countries about
-            the messages of sharing and opening.
-          </span>
-            </li>
-            <li id="program2" class="program-item" tabindex="0">
-                <img src="assets/icons/program2.png" alt="CC Exhibition Icon">
-                <h3>CC Exhibition</h3>
-                <span>
-            Appreciate various creations applying CC license of
-            artists, organized from Art Center Nabi.
-          </span>
-            </li>
-            <li id="program3" class="program-item" tabindex="0">
-                <img src="assets/icons/program3.png" alt="Forum Icon">
-                <h3>Forum</h3>
-                <span>
-            Have the time to share your thoughts and opinions with
-            experts for each topic.
-          </span>
-            </li>
-            <li id="program4" class="program-item" tabindex="0">
-                <img src="assets/icons/program4.png" alt="Workshop Icon">
-                <h3>Workshop</h3>
-                <span>
-            Try creating your own work using open source license
-            rather than just watching.
-          </span>
-            </li>
-            <li id="program5" class="program-item" tabindex="0">
-                <img src="assets/icons/program5.png" alt="CC Ignite Icon">
-                <h3>CC Ignite</h3>
-                <span>
-            Get opportunities to network with CC affiliates around
-            the world, also after the summit.
-          </span>
-            </li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Unlimited Love Launch Party</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- nav mobile -->
+    <header>
+      <span class="verytop">
+        <img
+          class="vtoplogo"
+          src="./assets/Images/fblogo.png"
+          alt="facebook logo"
+        />
+        <img
+          class="vtoplogo"
+          src="./assets/Images/twlogo.png"
+          alt="twitter logo"
+        />
+        <a class="vta" href="#">English</a>
+        <a class="vta" href="#">My Page</a>
+        <a class="vta" href="#">Login</a>
+      </span>
+      <nav class="navbar">
+        <a href="#" class="toplogo">
+          <img src="./assets/Images/chililogo.png" alt="band logo" />
+        </a>
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="./about.html" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="#program" class="nav-link">Program</a>
+          </li>
+          <li class="nav-item">
+            <a href="#tickets" class="nav-link">Tickets</a>
+          </li>
+          <li class="nav-item">
+            <a href="#sponsors" class="nav-link">Sponsor</a>
+          </li>
+          <li class="nav-item"><a href="#" class="nav-link">News</a></li>
+          <li class="nav-item">
+            <a href="#" class="nav-link funky">Get Funky!</a>
+          </li>
         </ul>
-        <button id="join-summit" class="mobile-visible" type="button">Join CC Global Summit 2015</button>
-        <button id="seewhole" class="desktop-visible">See The Whole Program</button>
-    </section>
-    <section id="speakers">
-        <h2>Featured Speakers</h2>
-        <hr class="hr">
-        <ul id="speakers-list"></ul>
-        <button id="all-speakers" type="button" onclick="javascript:void(0)" class="mobile-visible">
-        <span class="btn-more">More</span>
-        <img class="more-icon rotate" src="/assets/icons/arrow_down.png" alt="Arrow icon.">
-      </button>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+    </header>
+    <!-- Title Page -->
+    <section class="landing">
+      <p class="above-header">Join us for the global premiere!</p>
+      <a>
+        <img src="./assets/Images/LOGO.png" alt="unlimited love" class="logo" />
+      </a>
+      <h1 class="header1">by the Red Hot Chili Peppers</h1>
 
+      <p class="above-h2 second">
+        A joyful celebration of music, dance, creativity, and love. Great and
+        cosmic energy will flow through this album starting April 1st, 2022. You
+        can't miss it!
+      </p>
+
+      <h2 class="second">~ 2022.04.01 (FRI) ~</h2>
+      <p class="second">@ The Fonda Theatre, in Hollywood, Califormia</p>
+    </section>
+    <!-- Main Program -->
+    <section class="mainprogram" id="program">
+      <h2>Main Program</h2>
+      <hr class="divisionline1" />
+      <div class="program">
+        <ul>
+          <li>
+            <img src="./assets/Images/Introduction.png" alt="introduction" />
+            <h3>Introduction</h3>
+            <p>Presentation of the album by the producer Rick Rubin</p>
+          </li>
+          <li>
+            <img src="./assets/Images/Artinstall.png" alt="exhibit" />
+            <h3>Art Exhibit</h3>
+            <p>Exhibition of Mike's "The Flea" paintings and sculptures.</p>
+          </li>
+          <li>
+            <img src="./assets/Images/Opening.png" alt="Band Opening" />
+            <h3>Opening</h3>
+            <p>Concert opening by The Strokes, followed by Har Mar Superstar</p>
+          </li>
+          <li>
+            <img src="./assets/Images/Performance.png" alt="Main event" />
+            <h3>Performance</h3>
+            <p>The Red Hot Chili Peppers Live playing Unlimited Love</p>
+          </li>
+          <li>
+            <img src="./assets/Images/QandA.png" alt="Audience Questions" />
+            <h3>Q&A</h3>
+            <p>Q&A with the band about the project and their inspirations</p>
+          </li>
+        </ul>
+
+        <button class="tickets-btn" id="tickets" type="button">
+          Get Tickets to the Party!
+        </button>
+      </div>
+    </section>
+
+    <!-- Presenters or speakers -->
+
+    <section class="mainspeakers">
+      <h2>Previous Albums</h2>
+      <hr class="divisionline1" />
+
+      <div class="content gradient maxHeight">
+        <ul class="cardscontainer"></ul>
+      </div>
+
+      <div class="button">
+        <span class="show-more">Show More</span>
+        <span class="show-less d-none">Show Less</span>
+        <i class="fas fa-chevron-down"></i>
+      </div>
+
+      <!-- Partners -->
+
+      <section class="partners" id="sponsors">
+        <h2>Partners</h2>
+        <hr class="divisionline1" />
+        <div class="brandlogos">
+          <img src="./assets/Images/sponsor1.png" alt="macdonalds" />
+          <img src="./assets/Images/sponsor2.png" alt="adidas" />
+          <img src="./assets/Images/sponsor3.png" alt="cocacola" />
+          <img src="./assets/Images/sponsor4.png" alt="apple" />
+        </div>
+      </section>
+
+      <footer class="waiver">
+        <img class="wimg" src="./assets/Images/chililogo.png" alt="bandlogo" />
+        <h3>
+          © 2022 RHCP.
+          <br />
+          All Rights Reserved
+        </h3>
+      </footer>
+    </section>
+    <script src="script.js"></script>
+  </body>
 </html>
