--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unlimited Love Launch Party</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- nav mobile -->
+    
     <header>
-      <span class="verytop">
+      <span class="vtop">
         <img
-          class="vtoplogo"
+          class="vvtoplogo"
           src="./assets/Images/fblogo.png"
           alt="facebook logo"
         />
         <img
-          class="vtoplogo"
-          src="./assets/Images/twlogo.png"
+          class="vvtoplogo"
+          src="./assets/Images/tw-logo.png"
           alt="twitter logo"
         />
-        <a class="vta" href="#">English</a>
-        <a class="vta" href="#">My Page</a>
-        <a class="vta" href="#">Login</a>
+        <a class="vvta" href="#">English</a>
+        <a class="vvta" href="#">My Page</a>
+        <a class="vvta" href="#">Login</a>
       </span>
       <nav class="navbar">
-        <a href="#" class="toplogo">
-          <img src="./assets/Images/chililogo.png" alt="band logo" />
+        <a href="#" class="top-logo">
+          <img src="./assets/Images/chililogoverse.png" alt="bandgroup logo" />
         </a>
         <ul class="nav-menu">
           <li class="nav-item">
@@ -44,56 +44,56 @@
           </li>
           <li class="nav-item"><a href="#" class="nav-link">News</a></li>
           <li class="nav-item">
-            <a href="#" class="nav-link funky">Get Funky!</a>
+            <a href="#" class="nav-link funky">Go CAMPY!</a>
           </li>
         </ul>
         <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
+          <span class="barr"></span>
+          <span class="barr"></span>
+          <span class="barr"></span>
         </div>
       </nav>
     </header>
-    <!-- Title Page -->
+   
     <section class="landing">
       <p class="above-header">Join us for the global premiere!</p>
       <a>
-        <img src="./assets/Images/LOGO.png" alt="unlimited love" class="logo" />
+        <img src="./assets/Images/logo.png" alt="unlimited love" class="logo" />
       </a>
-      <h1 class="header1">by the Red Hot Chili Peppers</h1>
+      <h1 class="header1">By the Red Hot Chili Peppers</h1>
 
       <p class="above-h2 second">
         A joyful celebration of music, dance, creativity, and love. Great and
-        cosmic energy will flow through this album starting April 1st, 2022. You
+        cosmic energy will flow through this album starting April 15th, 2022. You
         can't miss it!
       </p>
 
-      <h2 class="second">~ 2022.04.01 (FRI) ~</h2>
-      <p class="second">@ The Fonda Theatre, in Hollywood, Califormia</p>
+      <h2 class="second">~ 2022.04.15 (FRI) ~</h2>
+      <p class="second">@ The National theater, in Nollywood, Nigeria</p>
     </section>
-    <!-- Main Program -->
-    <section class="mainprogram" id="program">
+    
+    <section class="main-program" id="program">
       <h2>Main Program</h2>
-      <hr class="divisionline1" />
+      <hr class="divisionline10" />
       <div class="program">
         <ul>
           <li>
-            <img src="./assets/Images/Introduction.png" alt="introduction" />
+            <img src="./assets/Images/Introductions.png" alt="introductions" />
             <h3>Introduction</h3>
-            <p>Presentation of the album by the producer Rick Rubin</p>
+            <p>Presentation of the album by the producer Tony West</p>
           </li>
           <li>
-            <img src="./assets/Images/Artinstall.png" alt="exhibit" />
+            <img src="./assets/Images/Exhibition.png" alt="exhibit" />
             <h3>Art Exhibit</h3>
-            <p>Exhibition of Mike's "The Flea" paintings and sculptures.</p>
+            <p>Exhibition of Joe's "The Flea" paintings and sculptures.</p>
           </li>
           <li>
-            <img src="./assets/Images/Opening.png" alt="Band Opening" />
+            <img src="./assets/Images/Band-Opening.png" alt="Band Opening" />
             <h3>Opening</h3>
-            <p>Concert opening by The Strokes, followed by Har Mar Superstar</p>
+            <p>Concert opening by The Strokes, followed by Street Life Superstars</p>
           </li>
           <li>
-            <img src="./assets/Images/Performance.png" alt="Main event" />
+            <img src="./assets/Images/Performance-event.png" alt="Main event" />
             <h3>Performance</h3>
             <p>The Red Hot Chili Peppers Live playing Unlimited Love</p>
           </li>
@@ -110,37 +110,33 @@
       </div>
     </section>
 
-    <!-- Presenters or speakers -->
-
-    <section class="mainspeakers">
+    <section class="main-speakers">
       <h2>Previous Albums</h2>
-      <hr class="divisionline1" />
+      <hr class="divisionline10" />
 
       <div class="content gradient maxHeight">
-        <ul class="cardscontainer"></ul>
+        <ul class="cards-container"></ul>
       </div>
 
       <div class="button">
         <span class="show-more">Show More</span>
         <span class="show-less d-none">Show Less</span>
-        <i class="fas fa-chevron-down"></i>
+        <i class="fas fa-shell-down"></i>
       </div>
-
-      <!-- Partners -->
 
       <section class="partners" id="sponsors">
         <h2>Partners</h2>
-        <hr class="divisionline1" />
-        <div class="brandlogos">
-          <img src="./assets/Images/sponsor1.png" alt="macdonalds" />
-          <img src="./assets/Images/sponsor2.png" alt="adidas" />
-          <img src="./assets/Images/sponsor3.png" alt="cocacola" />
-          <img src="./assets/Images/sponsor4.png" alt="apple" />
+        <hr class="divisionline10" />
+        <div class="brand-logos">
+          <img src="./assets/Images/sponsor-1.png" alt="macdonalds" />
+          <img src="./assets/Images/sponsor-2.png" alt="adidas" />
+          <img src="./assets/Images/sponsor-3.png" alt="cocacola" />
+          <img src="./assets/Images/sponsor-4.png" alt="apple" />
         </div>
       </section>
 
       <footer class="waiver">
-        <img class="wimg" src="./assets/Images/chililogo.png" alt="bandlogo" />
+        <img class="wimg" src="./assets/Images/chililogoverse.png" alt="bandgroup logo" />
         <h3>
           © 2022 RHCP.
           <br />
