add changes to project files

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <p>The Red Hot Chili Peppers Live playing Unlimited Love</p>
           </li>
           <li>
-            <img src="./assets/Images/QandA.png" alt="Audience Questions" />
+            <img src="./assets/Images/Audience.png" alt="Audience Questions" />
             <h3>Q&A</h3>
             <p>Q&A with the band about the project and their inspirations</p>
           </li>
